# ShutdownApp

./: .gitignore  .gitmodules  CMakeLists.txt  config.conf  config.conf.dist  run_service.bat  settings.gradle
NOSA-Android/: build.gradle  proguard-rules.txt
NOSA-Android/src/main/: AndroidManifest.xml
NOSA-Android/src/main/java/com/frca/shutdownandroid/: MainActivity.java  SettingsActivity.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/Helpers/: Helper.java  LimitedExecutor.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/adapters/: ConnectionArrayAdapter.java  ControlGridAdapter.java  NavigationDrawerAdapter.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/adapters/base/: IconTwoLineArrayAdapter.java  TwoLineArrayAdapter.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/classes/: Command.java  Connection.java  ConnectionList.java  ControlAction.java  DialogAddConnection.java  DirectConnection.java  NVMap.java  ProxyConnection.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/fragments/: BaseFragment.java  ControlFragment.java  MainFragment.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/fragments/preference/: BaseSettingsFragment.java  ManageConnectionsSettingsFragment.java  SummaryPreferenceFragment.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/network/: Command.java  NetworkTask.java  NetworkThread.java  Packet.java
NOSA-Android/src/main/java/com/frca/shutdownandroid/network/http/: HttpTask.java
NOSA-Android/src/main/res/layout/: activity_main.xml  dialog_edit.xml  dialog_line_item.xml  dialog_username_password.xml  edit_text.xml  fragment_control.xml  fragment_main.xml  icon_two_line_list_item.xml
NOSA-Android/src/main/res/menu/: main.xml
NOSA-Android/src/main/res/values/: array.xml  strings.xml  styles.xml
NOSA-Android/src/main/res/xml/: fragment_settings.xml  preference_headers.xml
NOSA-PCClient/: CMakeLists.txt
NOSA-PCClient/res/: icon.rc  resources.h
NOSA-PCClient/src/: config.cpp  config.h  defaultwindow.cpp  defaultwindow.h  main.cpp  winwindow.cpp  winwindow.h
NOSA-RemoteServer/: CMakeLists.txt
NOSA-RemoteServer/src/: androidconnection.cpp  androidconnection.h  baseconnection.cpp  baseconnection.h  connectioncontainer.cpp  connectioncontainer.h  main.cpp  networksocket.cpp  networksocket.h  pcconnection.cpp  pcconnection.h  remotecore.cpp  remotecore.h  serversocket.cpp  serversocket.h  singleton.h
NOSA-Server/: CMakeLists.txt
NOSA-Server/src/: connection.cpp  main.cpp  mainsocket.cpp  mainsocket.h  packethandler.cpp  packethandler.h  pccore.cpp  pccore.h  servercontrol.cpp  servercontrol.h  urlhandler.cpp  urlhandler.h
NOSA-shared/: CMakeLists.txt
NOSA-shared/src/: basecore.cpp  basecore.h  commandhandler.cpp  commandhandler.h  configuration.cpp  configuration.h  defines.h  helper.cpp  helper.h  ipaddress.cpp  networksocket.cpp  networksocket.h  nvmap.cpp  nvmap.h  packet.cpp  packet.h  sha512.cpp  sha512.h  singleton.h  socketclosedexception.cpp  socketclosedexception.h  socketpacket.cpp  socketpacket.h
ShutdownAndroid/: build.gradle
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/: Connection.java  ConnectionArrayAdapter.java  ControlAction.java  ControlGridAdapter.java  Helper.java  HttpTask.java  LimitedExecutor.java  MainActivity.java  NetworkTask.java  NetworkThread.java  TwoLineArrayAdapter.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/Helpers/: Helper.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/adapters/: ConnectionArrayAdapter.java  ControlGridAdapter.java  TwoLineArrayAdapter.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/classes/: Connection.java  ControlAction.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/fragments/: BaseFragment.java  ChildFragment.java  ControlFragment.java  LimitedExecutor.java  LoadingFragment.java  MainFragment.java  OfflineFragment.java  OnlineFragment.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/network/: NetworkTask.java  NetworkThread.java
ShutdownAndroid/src/main/java/com/frca/shutdownandroid/network/http/: HttpTask.java
ShutdownAndroid/src/main/res/layout/: activity_main.xml  dialog_seek.xml  dialog_username_password.xml  fragment_loading.xml  fragment_offline.xml  fragment_online.xml  grid_control_item.xml
ShutdownAndroid/src/main/res/values/: strings.xml
ShutdownAndroid/src/main/res/values-land/: styles.xml
ShutdownServer/: .gitignore  CMakeLists.txt  comserver.h
ShutdownServer-MVS/ShutdownServer-MVS/: main.cpp
ShutdownServer/cmake/: CMakeLists.txt  connection.cpp  connection.h  helper.cpp  helper.h  ipaddress.cpp  ipaddress.h  main.cpp
ShutdownServer/cmake/include/curl-build/: CMakeCache.txt
ShutdownServer/cmake/src/: CMakeLists.txt  connection.cpp  connection.h  core.cpp  helper.cpp  helper.h  main.cpp  urlhandler.cpp  urlhandler.h
ShutdownServer/dep/curl/: CMakeLists.txt
ShutdownServer/include/curl/: CMakeLists.txt
ShutdownServer/msvc/: .gitignore  main.cpp  msvc.sln
ShutdownServer/qt/: ShutdownServer.pro  comserver.cpp  main.cpp
ShutdownServer/src/: CMakeLists.txt  connection.cpp  core.cpp  core.h  helper.cpp  helper.h  servercontrol.cpp  servercontrol.h  urlhandler.cpp  urlhandler.h
gradle/wrapper/: gradle-wrapper.properties
