aux_source_directory(. SRC_LIST)
set(CMAKE_BUILD_TYPE "Release")
add_executable("ShutdownServer" ${SRC_LIST})
set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR}/include)
target_link_libraries("ShutdownServer" ws2_32 iphlpapi ${LIB_DIR}/libcurl.dll)
SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,--no-undefined -static -static-libgcc -static-libstdc++ -Wl,-O1 -Wl,--as-needed -Wl,--sort-common -s")
